- Added XRC handler for wxPropertySheetDialog (Sander Berents).
- API consistency fixes: added wxMenuBar::SetMenuLabel, wxMenuBar::GetMenuLabel,
  wxMenuBar::GetMenuLabelText, wxMenu::GetLabelText, wxMenuItem::SetItemLabel,
  wxMenuItem::GetItemLabel, wxMenuItem::GetItemLabelText, wxMenuItem::GetLabelText.
  Retrieval of labels with and without mnemonics/accelerators is now possible.

wxMSW:

- Fix crash when destroying a default button (Tim Kosse).
- Correct problem with page setup dialog when using landscape mode.
- Added msw.font.no-proof-quality system option, see manual for description.
- Fix appearance of notebook with non-top tabs under Windows Vista.
- Fixed bug with symbol resolving in wxStackWalker (Axel Gembe).
- Fixed showing busy cursor for disabled windows and during wxExecute()
- Added wxBORDER_THEME, used automatically by wxTextCtrl in wxTE_RICH[2] mode.
- Fix problems with timers on SMP machines in wxAnimationCtrl (Gennady)

wxGTK:

- Fixed missing key events in wxGTK1 build.
- Setting foreground colour of single line wxTextCtrl now works.
- More work on setting defaults in GNOME print dialogs.
- Also made landscape printing work as per wxMSW.
- Add support for (rectangular) clipping in GNOME print backend.
- Speed up wxBitmap::Rescale().
- Add right button event for wxToolbar's tools (Tim Kosse).
- Made wxWindow::SetScrollPos and wxScrollbar::SetThumbPos
  not emit any event.
- Correct hyperactive mouse wheel support.
- Correct grid line mode in wxListCtrl.
- Don't unconditionally add wxCAPTION style to wxMiniFrame.
- Fixed crash in file and dir pickers for GTK+ < 2.6 if compiled
  with GTK+ >= 2.6.
- Generate wxEVT_COMMAND_LIST_END_LABEL_EDIT event even if label didn't change

wxMac:

- Fixed ability of non-native/installed toolbars to have controls,
  in native toolbar compilation mode.

wxMotif:

- Fix crash when using wxStaticBox with empty label


2.8.4
-----

All:

- Fix bug in wxFileConfig when recreating a group (Steven Van Ingelgem).